--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
 
     //Load toast
     compile 'net.steamcrafted:load-toast:1.0.10'
+
+    //Image view shape
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 }
