--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
 
     //Image view shape
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+
+    //Volley
+    compile 'com.android.volley:volley:1.0.0'
 }
