--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 
     //LOAD IMAGE
     compile 'com.github.bumptech.glide:glide:3.6.0'
