implementing data base local

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <idCategory android:name="android.intent.idCategory.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
