--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     //Volley
     compile 'com.android.volley:volley:1.0.0'
+
+    //Toast load
+    compile 'net.steamcrafted:load-toast:1.0.10'
 }
