--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,17 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator"/>
         </service>
+
+        <service
+            android:name=".sync.SyncService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.AsyncAdapter"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.content.AsyncAdapter"
+                android:resource="@xml/sync_adapter"/>
+        </service>
     </application>
 
 </manifest>
