--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <!--AUTHENTICATES THE APP-->
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
@@ -83,6 +84,10 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/sync_adapter"/>
         </service>
+
+        <service
+            android:name=".ui.fragment.DetectedActivitiesIntentService"
+            android:exported="false"/>
     </application>
 
 </manifest>
