--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,22 +22,21 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:cardview-v7:24.0.0'
-    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'com.google.android.gms:play-services-location:8.4.0'
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
+    compile 'com.google.android.gms:play-services-places:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
 
     //LOAD IMAGE
     compile 'com.github.bumptech.glide:glide:3.6.0'
 
     //View pager indicator
     compile 'me.relex:circleindicator:1.1.8@aar'
-
-    //View with ripple effect
-    compile 'com.github.traex.rippleeffect:library:1.3'
 
     //Load toast
     compile 'net.steamcrafted:load-toast:1.0.10'
@@ -60,3 +59,5 @@ dependencies {
     //GreenDAO
     compile 'de.greenrobot:greendao:2.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
