--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,9 +85,23 @@
                 android:resource="@xml/sync_adapter"/>
         </service>
 
+        <!--GOOGLE API CLIENT - LOCATION AND ACTIVITY-->
         <service
             android:name=".ui.fragment.DetectedActivitiesIntentService"
             android:exported="false"/>
+
+        <!--SERVICE FOR PUSH NOTIFICATION-->
+        <service android:name=".global.IFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".global.IFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
